# DigitCNN

./: CNNVisualizer2.cabal
dist-newstyle/cache/: up-to-date
gui/: main.py
src/: DigitCNN.hs
